Add batch delete operation logs API